--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Digital Clock</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Checkout
             </button>
           </div>
@@ -126,10 +126,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Calculator</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Checkout
             </button>
           </div>
@@ -140,10 +140,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Pomodoro Timer</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha247'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/argha-codes'">
               Checkout
             </button>
           </div>
